# mod-android-client

./: .gitignore  .gitmodules  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/custom_objects/inner_net/: InnerNetObj.cpp  InnerNetObj.h  SpawnEntity.cpp  SpawnEntity.h  inner_net_obj_types.h  spawn_entity_types.h
app/src/main/cpp/custom_objects/inner_net/objects/: ClickBehavior.cpp  ClickBehavior.h  ConsoleBehaviour.cpp  ConsoleBehaviour.h  CooldownClickBehaviour.cpp  CooldownClickBehaviour.h  CustomNetworkTransform.cpp  CustomNetworkTransform.h  DeadBody.cpp  DeadBody.h  GraphicObject.cpp  GraphicObject.h  LightSource.h  PointOfInterest.cpp  PointOfInterest.h  PrefabHandle.cpp  PrefabHandle.h  SoundSource.cpp  SoundSource.h
app/src/main/cpp/il2cpp-headers/: 2020.11.17a.json
app/src/main/cpp/il2cpp-headers/appdata-arm32/: il2cpp-api-functions-ptr.h  il2cpp-api-functions.h  il2cpp-types-ptr.h
app/src/main/cpp/il2cpp-headers/appdata-arm64/: il2cpp-api-functions-ptr.h  il2cpp-metadata-version.h  il2cpp-types-ptr.h
app/src/main/cpp/il2cpp-headers/framework/: il2cpp-appdata.h  il2cpp-helpers.cpp  il2cpp-helpers.h  il2cpp-init.cpp  il2cpp-init.h
app/src/main/cpp/patches/: patch_manager.cpp  patch_manager.h
app/src/main/cpp/patches/base/: version_shower_patch.cpp  version_shower_patch.h
app/src/main/cpp/patches/game_data/: rpc_handler.cpp  rpc_handler.h  rpc_types.h
app/src/main/cpp/patches/game_transition_screen/: end_screen.cpp  end_screen.h  start_screen.cpp  start_screen.h
app/src/main/cpp/patches/inner_net_client/: ino_data_serialize_patch.cpp  ino_data_serialize_patch.h
app/src/main/cpp/patches/lifecycle/: endgamehook.cpp  endgamehook.h  shipstatus_begin.cpp  shipstatus_begin.h
app/src/main/cpp/patches/lobby_behaviour/: rpc_handler.cpp  rpc_handler.h  rpc_types.h
app/src/main/cpp/patches/player_control/: chat_command_patch.cpp  chat_command_patch.h  remove_murder_check.cpp  remove_murder_check.h  rpc_handler.cpp  rpc_handler.h  rpc_types.h
app/src/main/cpp/patches/root_packet/: root_packet_handler.cpp  root_packet_handler.h  root_packet_types.h
app/src/main/cpp/patches/root_packet/game_data/: spawn_packet_handler.cpp  spawn_packet_handler.h
app/src/main/cpp/patches/set_string/: set_string.cpp  set_string.h
app/src/main/cpp/patches/shipstatus/: rpc_handler.cpp  rpc_handler.h  rpc_types.h
app/src/main/cpp/services/: AssetBundleManager.h  ICallHelper.cpp  ICallHelper.h  InnerNetObjManager.cpp  InnerNetObjManager.h
app/src/main/cpp/services/icalls/: unstrip.cpp  unstrip.h
app/src/main/cpp/util/: construct_color.cpp  construct_color.h  construct_type.cpp  construct_type.h  helpers.cpp  helpers.h  jni_helpers.cpp  jni_helpers.h  logger.h  message_extensions.cpp  message_extensions.h  renderer_extensions.cpp  renderer_extensions.h
app/src/main/java/com/cydon/pggandroid/: MainActivity.java  UnityPlayerActivity.java
app/src/main/res/drawable/: btn_rounded.xml
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
